data/collection/fixes/descriptions/kotlin/KT-13110
```
import kotlin.reflect.KClass

fun f(x: KClass<Int>) {}

fun main(args: Array<String>) {
    f(42::class)
}
```

```
1.kt:6:7: error: type mismatch: inferred type is KClass<IntegerValueType(42)> but KClass<Int> was expected
    f(42::class)
      ^
```
